--- a/grid-card/styles.css
+++ b/grid-card/styles.css
@@ -17,7 +17,12 @@ body {
     max-width: 800px;
     width: 90%;
     margin: 0 auto;
-    grid-template: 200px auto auto 100px / auto auto;
+    grid-template:200px auto auto 100px / auto auto 1em;
+    background-color: #111D4A;
+    color: #FFFFFF;
+    font-size: 16px;
+    row-gap: 1.5em;
+    
 }
 
 
@@ -26,6 +31,7 @@ body {
 .image {
    object-fit: cover;
    grid-column: 1/-1;
+   grid-row: 1;
    width: 100%;
    height: 100%;
 }
@@ -33,38 +39,27 @@ body {
 .tips-heading {
     color: #05CBE9;
     font-size: 36px;
-    
-
-}
+    grid-row: 2;
+    grid-column: 1/-1;
+    }
 
 .tips-message {
-    margin: 15px;
+    grid-row: 3;
+    grid-column: 1/-1;
 }
-.main{  
-   background-color: #111D4A;
-    color: #FFFFFF;
-    font-size: 16px;
-      
-}
+
 
 /* opacity = making text light in view */
 .read{
-    margin:  0 15px;
     opacity: .6;
     font-size: 18px;
     line-height: 1;
+    grid-row: 5;
     
 }
 
 /* jc = seperate items apart
 f-e = brings items to the bottom */
-.bottom {
-   
-    display:flex;
-    justify-content: space-between;
-    align-items: flex-end; 
-    margin-top: 3em;
-}
 
 .card-btn{    
     background-color: #05CBE9;
@@ -72,14 +67,17 @@ f-e = brings items to the bottom */
     text-decoration: none;
     text-align: center;
     font-size: 1.25rem;
-    padding: .35em 1em;
     letter-spacing: 1px;
-    margin: 20px;
+    justify-self: end;
+    grid-row: 5;
+    grid-column: 2;
+    padding: 10px;
+    
 }
 
 span {
     font-weight: 900;
-    font-size: 20px;
+    font-size: 20px;    
 }
 
 /* on Large screen */
@@ -87,16 +85,22 @@ span {
 @media (min-width: 600px){
 
     .container {
-        flex-direction: row;
+        display: grid;
+        grid-template: 200px 400px 150px/ 300px auto auto ;
     }
 
     .image{
-        height: 300px;
+        /* height: 300px; */
+        grid-column: 1;
+        grid-row: 1/-1;
+        object-fit: cover;
+        width: 100%;
+        height: 100%;
     }
 
-    .main{
-        flex-direction: column;
-        display: flex;
+    .tips-heading{
+       grid-row: 1;
+       grid-column: 2/-1;
     }
 
     .bottom{
