--- a/grid-card/styles.css
+++ b/grid-card/styles.css
@@ -80,34 +80,38 @@ span {
     font-size: 20px;    
 }
 
-/* on Large screen */
+/* =======ON LARGE SCREEN==== */
 
 @media (min-width: 600px){
 
     .container {
         display: grid;
-        grid-template: 200px 400px 150px/ 300px auto auto ;
+        grid-template: 1em auto auto 150px 1em / 200px auto auto ;
+        grid-gap: 0 1em; 
     }
 
-    .image{
-        /* height: 300px; */
-        grid-column: 1;
+    .image{  
+        grid-column: 1/2;
         grid-row: 1/-1;
-        object-fit: cover;
-        width: 100%;
-        height: 100%;
     }
 
     .tips-heading{
        grid-row: 1;
-       grid-column: 2/-1;
-    }
-
-    .bottom{
-        margin-top: auto;
+       grid-column: 2/-3;
     }
 
     .tips-message {
-        max-width: 500px;
+       grid-row: 4;
+       grid-column: 2;
     }
+    .read {
+        grid-row: 5;
+        grid-column: 2;
+    /* grid-column: 2; */
+    }
+    .card-btn{
+        /* justify-self: end; */
+        grid-row: 3;
+        justify-self: end;
+        }
 }
