--- a/my-profile/style.css
+++ b/my-profile/style.css
@@ -1,3 +1,249 @@
-body{
-    background-color: lightblue;
+/* change how padding is calculated == within a width */
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
 }
+
+/* customizing font family = suiting preferences*/
+:root {
+    --ff-primary: 'Source Sans Pro', sans-serif;
+    --ff-secondary: 'Source Code Pro', monospace;
+    
+    --fw-reg: 300;
+    --fw-bold: 900;
+    
+    --clr-light: #fff;
+    --clr-dark: #303030;
+    --clr-accent: #16e0bd;
+    
+    --fs-h1: 3rem;
+    --fs-h2: 2.25rem;
+    --fs-h3: 1.25rem;
+    --fs-body: 1rem;
+}
+@media (min-width: 800px) {
+    :root {
+        --fs-h1: 4.5rem;
+        --fs-h2: 3.75rem;
+        --fs-h3: 1.5rem;
+        --fs-body: 1.125rem;
+
+        --bs: 0.25em 0.25em 0.75em rgba(0,0,0,.25);
+    }
+}
+
+/* ======GENERAL STYLES===== */
+body{
+    background: var(--clr-light);
+    color: var(--clr-dark);
+    margin: 0;
+    font-size: var(--fs-body);
+    line-height: 1.6em;
+}
+
+img {
+    display: block;
+    max-width: 100%;
+    top: 288px;
+    left: 33px;
+    width: 249px;
+    height: 249px;
+    opacity: 1;
+}
+
+/* ===BUTTONS=== */
+.btn {
+    display: inline-block;
+    padding: .5em 1.5em;
+    background: var(--clr-accent);
+    color: var(--clr-dark);
+    text-decoration: none;
+    cursor: pointer;
+    font-size: .8rem;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    font-weight: var(--fw-bold);
+    transition: transform 200ms ease-in-out;
+}
+
+.btn:hover {
+    transform: scale(1.1);
+}
+
+strong { font-weight: var(--fw-bold) }
+
+:focus {
+    outline: 3px solid var(--clr-accent);
+    outline-offset: 3px;
+}
+/* ====TYPOGRAPHY=== */
+span{font-weight: var(--fw-bold);}
+
+h1,
+h2,
+h3 {
+    line-height: 1.1em;
+    margin: 0;
+}
+
+section {
+    padding: 2em;
+}
+
+h1{font-size: var(--fs-h1);}
+h2{font-size: var(--fs-h2);}
+h3{font-size: var(--fs-h3);}
+
+.section--title{
+margin-bottom: .25em;
+}
+.section--subtitle {
+    margin:  0;
+    font-size: var(--fs-h3);
+}
+
+.section__title--intro{
+font-weight: var(--fw-reg);
+}
+
+.section__title--intro strong{
+    display: block;
+}
+.section__subtitle--intro,
+.section__subtitle--about {
+    background: var(--clr-accent);
+    font-family:var(--ff-secondary);
+}
+
+/* =====INTRO SECTION==== */
+
+nav{
+display: none;
+}
+
+.intro{
+    position: relative;
+}
+
+@media (min-width: 600px){
+    .intro {
+        display: grid;
+        width: min-content;
+        grid-template-areas: "img title"
+                            "img subtitle";
+        grid-template-columns:min-content max-content;
+        margin: 0 auto;
+        grid-gap: 1em;
+    }
+
+    img{
+        grid-area: img;
+        /* position: relative; */
+        min-width: 250px;
+        z-index: 2;
+        box-shadow: var(--bs);
+    }
+    .section__subtitle--intro {
+        align-self: start;
+        grid-column: 1/-1;
+        grid-row: 2;
+        text-align: right;
+        position: relative;
+        left: -1.5em;
+        width: calc(100% + 1.5em);
+    }
+}
+
+/* ====MY SERVICES=== */
+
+.my-services{
+    background-color: var(--clr-dark);
+    background-image: url();
+    background-size: cover;
+    color: var(--clr-light);
+    text-align: center;
+}
+.section__title--services {
+    color: var(--clr-accent);
+    position: relative;
+}
+
+.section__title--services::after {
+    content: '';
+    display: block;
+    width: 3em;
+    height: 1px;
+    margin: 0.5em auto 1em;
+    background: var(--clr-accent);
+    opacity: .25;
+}
+
+.service {
+    max-width: 500px;
+    margin-left:  auto;
+    margin-bottom: 2em;
+}
+
+@media (min-width: 800px){
+    .services{
+        display: flex;
+        max-width: 1000px;
+        margin: 0 auto;
+    }
+    .service + .service {
+        margin-left: 2em;
+        text-align: justify;
+    }
+    /* .btn {
+        background: var(--clr-accent);
+
+    } */
+}
+
+/*=====ABOUT-ME====  */
+
+.about-me{
+    max-width: 1000px;
+    margin: 0 auto;
+
+}
+@media (min-width:600px){
+    .about-me{
+        display:grid;
+        grid-template-columns: 1fr 200px;
+        grid-template-areas: 
+                    "title img"
+                    "subtitle img"
+                    "text img";
+        grid-column-gap: 2em ;
+    }
+    .section__subtitle--about {
+        grid-area: title;
+    }
+    .about-me-img {
+        grid-area: img;
+        min-width: 200px;
+        z-index: 3;
+        
+    }
+    .section__subtitle--about{
+        grid-column: 1 / -1;
+        grid-row: 2;
+        position: relative;
+        left: -2em;
+        width: calc(100% + 4em);
+        padding-left: 2em;
+        padding-right: calc(200px + 4em);
+    }
+}
+
+
+
+
+/*===INDEX=====
+
+fs = font size
+bs = box shadow
+z-idex =position relative
+*/
