--- a/my-profile/style.css
+++ b/my-profile/style.css
@@ -48,10 +48,13 @@ html{
 img {
     display: block;
     max-width: 100%;
+    max-height: 100%;
+    width: auto;
+    height: auto;
     /* top: 288px;
-    left: 33px;
-    width: 249px;
-    height: 249px;
+     left: 33px;  
+     width: 249px; 
+    height: 50vh;
     opacity: 1; */
 }
 
@@ -133,7 +136,7 @@ font-weight: var(--fw-reg);
     padding: 1em;
 }
 .logo{
-    width: 100px;
+    width: 200px;
 }
 
 .nav{
@@ -297,9 +300,10 @@ font-weight: var(--fw-reg);
 .my-work{
     background-color: var(--clr-dark);
     color: var(--clr-light);
-    text-align: center;
-   
+    text-align: center;   
 }
+
+
 .portfolio{
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(200px,1fr));
