--- a/AirBnb-experience/src/App.css
+++ b/AirBnb-experience/src/App.css
@@ -10,11 +10,11 @@
 }
 
 .logo-airbnb {
-  width: 150px;
+  width: 130px;
   height: 50px;
 }
 .grid-image{
-  width: 700px;
+  width: 600px;
   height: 350px;
 }
 
@@ -64,11 +64,17 @@ section {
 .card {
   width: 175px;
   font-size: 12px;
+  flex: 0 0 auto;         
+  display: flex;          
+  flex-direction: column; 
+  position: relative;
 }
 
 .card--image {
   width: 100%;
+  height: 235px;
   border-radius: 9px;
+  margin-bottom: 9px;
 }
 
 .card--stats {
@@ -78,4 +84,26 @@ section {
 
 .card--star {
   height: 14px;
+}
+
+/* displaying a sold out badge */
+.card--badge{
+  position: absolute;
+  top: 6px;
+  left: 6px;
+  background-color: white;
+  padding: 5px 7px;
+  border-radius: 2px;
+  font-weight: bold;
+  color: green;
+}
+
+/* =====CARDS==== */
+
+.cards-list {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  gap: 20px;
+  overflow-x: auto;
 }
